@@ -11,6 +11,7 @@
 - Added hash-mode: AES-192-ECB NOKDF (PT = $salt, key = $pass)
 - Added hash-mode: AES-256-ECB NOKDF (PT = $salt, key = $pass)
 
+
 ##
 ## Bugs
 ##
@@ -40,6 +41,7 @@
 ## Technical
 ##
 
+- Brain: Add brain_ctx_t to hashcat_ctx_t to enable runtime check if hashcat was compiled with brain support
 - Autodetect: Limit the number of errors per hash-mode try to 100 to avoid long startup time
 - Folders: Do not escape the variable cpath_real to prevent certain OpenCL runtimes from running into an error which do not support escape characters
 - LM: Workaround JiT compiler bug in -m 3000 on NV leading to false negatives with large amount of hashes
